[package]
name = "umbrella-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Высокоуровневый orchestration — фасад для FFI; объединяет identity+mls+kt+oprf+sealed-sender+padding+backup+calls."

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Hybrid post-quantum opt-in (v1.1.0 release production release , production design Решение 7
# umbrella feature aggregator). Зонтичный pq для umbrella-client пробрасывает
# pq features во все downstream PQ-aware крейты (umbrella-mls, umbrella-identity,
# umbrella-kt, umbrella-sealed-sender, umbrella-backup) и подключает umbrella-pq
# напрямую — для использования X-Wing primitives и SLH-DSA backup в фасаде.
#
# Без feature `pq` крейт компилируется без PQ зависимостей; existing classical
# путь (Ed25519 identity + ciphersuite 0x0003) не меняется (FFI ABI invariant
# production design, постулат 14).
#
# Hybrid post-quantum opt-in (v1.1.0 release Release milestone , production design Decision 7
# umbrella feature aggregator). The umbrella `pq` feature on umbrella-client
# propagates pq features to all PQ-aware downstream crates (umbrella-mls,
# umbrella-identity, umbrella-kt, umbrella-sealed-sender, umbrella-backup) and
# enables the PQ implementations in downstream crates.
#
# Without feature `pq` the crate builds without PQ dependencies; the existing
# classical path (Ed25519 identity + ciphersuite 0x0003) stays untouched
# (FFI ABI invariant production design, postulate 14).
pq = [
    "umbrella-mls/pq",
    "umbrella-identity/pq",
    "umbrella-kt/pq",
    "umbrella-sealed-sender/pq",
    "umbrella-backup/pq",
    # F-IDENT-1 + F-IDENT-2 closure (2026-05-19): HwBackedKeyStore impl
    # references PQ types directly (HybridSignature, SlhDsa128fSignature,
    # XWING_CIPHERTEXT_LEN, XWING_SHARED_SECRET_LEN, HedgedWitness) in
    # its `cfg(feature = "pq")` trait-method stubs — pre-closure this
    # crate consumed PQ types only transitively through
    # umbrella-identity's trait signatures. The new direct dep makes
    # the cfg-gated trait impl compile cleanly.
    #
    # F-IDENT-1 + F-IDENT-2 closure: HwBackedKeyStore needs direct
    # access to umbrella-pq types under feature `pq` for cfg-gated
    # KeyStore trait stub methods.
    "dep:umbrella-pq",
]

[dependencies]
umbrella-identity = { workspace = true }
umbrella-mls = { workspace = true }
umbrella-kt = { workspace = true }
# F-CLIENT-FACADE-1 session 5 (2026-05-19): direct openmls deps for facade
# create_group + add_member wire-up — GroupId construction from chat_id
# bytes, KeyPackageIn validate, ProtocolVersion enum, leaf_node credential
# inspection. Previously openmls was a transitive dep through umbrella-mls;
# session 5 facade methods need its types at API boundary.
#
# F-CLIENT-FACADE-1 session 5: direct openmls deps for facade group create +
# add_member wire-up.
openmls = { workspace = true }
openmls_traits = { workspace = true }
umbrella-oprf = { workspace = true }
umbrella-sealed-sender = { workspace = true }
umbrella-padding = { workspace = true }
umbrella-backup = { workspace = true }
umbrella-calls = { workspace = true }

# Round-6 distributed identity backend.
umbrella-threshold-identity = { workspace = true }

# umbrella-crypto-primitives нужен для `MlockedSecret<T>` (round-5
# device-capture closure F-PHD-DC-R11-1): RowCipher.master_key + MockHwKeystore.
# umbrella-crypto-primitives provides `MlockedSecret<T>` (round-5 device-
# capture closure F-PHD-DC-R11-1): RowCipher.master_key + MockHwKeystore.
umbrella-crypto-primitives = { workspace = true }

# Optional direct dep enabled by feature `pq` — see [features] block above.
# F-IDENT-1 + F-IDENT-2 closure (2026-05-19): HwBackedKeyStore impl in
# `keystore::hw_backed` needs direct umbrella-pq access for cfg-gated
# KeyStore trait stub methods (HybridSignature, SlhDsa128fSignature,
# XWING_CIPHERTEXT_LEN, XWING_SHARED_SECRET_LEN, HedgedWitness).
#
# Optional direct dep enabled by feature `pq` — see [features] above.
# F-IDENT-1 + F-IDENT-2 closure: HwBackedKeyStore impl needs direct
# umbrella-pq access for cfg-gated KeyStore trait stub methods.
umbrella-pq = { workspace = true, optional = true }

# Ed25519 + CSPRNG для `MockHwKeystore` (round-5 device-capture closure
# F-PHD-DC-R10-1 Component 1). Раньше в [dev-dependencies] (attestation
# tests); теперь main dep для keystore::hw_callback.
# Ed25519 + CSPRNG for `MockHwKeystore` (round-5 device-capture closure
# F-PHD-DC-R10-1 Component 1). Was [dev-dependencies] (attestation
# tests); now a main dep for keystore::hw_callback.
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }

# F-1 closure (PhD-B Pass 5 remediation): Shamir 3-of-5 Lagrange
# interpolation over curve25519 scalar field GF(q) in
# `keystore::distributed_identity_client::unlock_with_pin`. Replaces the
# Pass 1 XOR-combine placeholder that broke threshold-property of the
# round-7 distributed identity protocol (algebraic linearity leak: any
# two reconstructions with different quora differ by XOR of unseen
# shares, revealing share correlations).
#
# F-1 closure: Shamir 3-of-5 Lagrange interpolation over curve25519
# scalar field in `keystore::distributed_identity_client::unlock_with_pin`.
curve25519-dalek = { workspace = true }


# Async runtime (production design Решение 3) и async-trait для UnwrapTransport impls.
# Async runtime (production design Decision 3) and async-trait for UnwrapTransport impls.
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP/2 transport (production release) + TLS 1.3.
# HTTP/2 transport (Release milestone) + TLS 1.3.
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
x509-cert = { workspace = true }

# SQLite метаданные (production release) + connection pool.
# SQLite metadata (Release milestone) + connection pool.
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# WebRTC сетевой слой (production release). DTLS engine не линкуется в production
# tree, пока нет поддерживаемого пути без bincode.
# WebRTC networking layer (Release milestone). The DTLS engine is not linked into
# the production tree until a maintained path exists without bincode.
webrtc-ice = { workspace = true }

# F-CLIENT-FACADE-1 session 10e (2026-05-19): real SRTP encrypt/decrypt
# integration in `call::srtp_pipeline::SrtpPipeline`. Two `Context` instances
# (one-way per direction: outbound encrypts with local master key/salt,
# inbound decrypts with remote master key/salt) implement the
# `AEAD_AES_256_GCM` protection profile (RFC 7714 §14 code `0x0008`)
# consistent с the SFrame `Aes256GcmSha512` choice (Stage 6). The
# higher-level `webrtc-srtp::session::Session` API couples UDP socket
# I/O via `Conn` + a tokio task; we deliberately use the lower-level
# `Context` so the network plane stays decoupled from the crypto plane.
# `Context::encrypt_rtp(&[u8])` / `decrypt_rtp(&[u8])` parse the RTP
# header internally — we do not need a direct `rtp` crate dep.
#
# F-CLIENT-FACADE-1 session 10e (2026-05-19): real SRTP encrypt/decrypt
# integration. Two one-way Context instances over AEAD_AES_256_GCM.
webrtc-srtp = { workspace = true }

# Symmetric AEAD для per-row encryption в SqliteMetadataStore (production release)
# и zeroize/secrecy для секретов. HKDF-SHA512 — deterministic nonce derive
# из (master_key, context||row_id) для RowCipher (production design Решение 5.1.2).
# `subtle` — constant-time `ConstantTimeEq` для nonce comparison в
# `RowCipher::decrypt_row` ( update production release;  pattern recurrence
# update — заменяет timing-observable `expected_nonce != nonce` на
# `subtle::ConstantTimeEq::ct_eq` для defense-in-depth даже когда
# practical impact LOW per design §5.1).
# Symmetric AEAD for per-row encryption in SqliteMetadataStore (Release milestone)
# and zeroize/secrecy for secret material. HKDF-SHA512 for deterministic
# nonce derivation from (master_key, context||row_id) in RowCipher
# (production design Decision 5.1.2). `subtle` — constant-time `ConstantTimeEq` for
# nonce comparison in `RowCipher::decrypt_row` ( update production release;
#  pattern recurrence update — replaces the timing-observable
# `expected_nonce != nonce` with `subtle::ConstantTimeEq::ct_eq` as
# defense-in-depth even when the practical impact is LOW per design §5.1).
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# F-CLIENT-FACADE-1 closure session 1 (2026-05-19): WebSocket transport
# for the gateway-svc `umx.pb.v1` subprotocol (RFC 6455 over TLS 1.3,
# Protobuf wire format). `tokio-tungstenite` is the only RustCrypto-friendly
# WebSocket client in the ecosystem that exposes a `Connector::Rustls(Arc<ClientConfig>)`
# variant, which is required to reuse the SPKI-pinning `ClientConfig` we
# already build in `transport::http2_client`. `prost` provides the Protobuf
# decoder for `ClientEnvelope` / `ServerEnvelope` generated by the build
# script from `proto/ws.proto`. `futures-util` exposes the `StreamExt::next`
# / `SinkExt::send` extension methods on the two halves of the WebSocket
# stream after `.split()`. See `docs/integration/gateway-svc-contract.md`
# for the wire-format contract.
#
# F-CLIENT-FACADE-1 closure session 1 (2026-05-19): WebSocket transport for
# the gateway-svc `umx.pb.v1` subprotocol (RFC 6455 over TLS 1.3, Protobuf
# wire format). `tokio-tungstenite` exposes a `Connector::Rustls(Arc<ClientConfig>)`
# variant which lets us reuse the SPKI-pinning `ClientConfig` already built by
# `transport::http2_client`. `prost` decodes the `ClientEnvelope` /
# `ServerEnvelope` types generated by the build script from `proto/ws.proto`.
# `futures-util` provides `StreamExt`/`SinkExt` extension methods over the two
# halves of the WebSocket stream after `.split()`.
tokio-tungstenite = { workspace = true }
prost = { workspace = true }
futures-util = { workspace = true }

# F-CLIENT-FACADE-1 closure session 2 (2026-05-19): QUIC transport to the
# gateway-svc UDP 443 endpoint (ALPN `umx-quic-v1`). Shares the SPKI-pinning
# `rustls::ClientConfig` with the HTTP/2 and WebSocket transports so a single
# cert-pin rotation flow covers all three. See
# `docs/integration/gateway-svc-contract.md §2.1`.
#
# F-CLIENT-FACADE-1 closure session 2: QUIC transport to gateway-svc UDP 443
# endpoint (ALPN umx-quic-v1).
quinn = { workspace = true }
bytes = { workspace = true }

# Errors + structured logs.
thiserror = { workspace = true }
tracing = { workspace = true }

# Round-6 deterministic CSPRNG для bootstrap test rigs.
rand_chacha = { workspace = true }

# Serde для config/metadata marshalling и hex-encoding для REST path-сегментов
# (account_id, message_id, peer_id в Http2KtTransport / Http2PostmanTransport /
# Http2CallRelayTransport — production release).
#
# Serde for config/metadata marshalling and hex encoding for REST path
# segments (account_id, message_id, peer_id in Http2KtTransport /
# Http2PostmanTransport / Http2CallRelayTransport — Release milestone).
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[build-dependencies]
# F-CLIENT-FACADE-1 closure session 1: compile `proto/ws.proto` to Rust types
# via prost-build. Generated output lives in `$OUT_DIR/umbrellax.gateway.v1.rs`
# and is `include!`'d from `src/transport/proto_ws.rs`.
#
# F-CLIENT-FACADE-1 closure session 1: compile `proto/ws.proto` to Rust types
# via prost-build. Generated output lives in `$OUT_DIR/umbrellax.gateway.v1.rs`
# and is `include!`'d from `src/transport/proto_ws.rs`.
prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
proptest = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
rcgen = { workspace = true }

# F-CLIENT-FACADE-1 closure session 1: the mock gateway harness in
# `tests/mock_gateway/` accepts WebSocket upgrades over a self-signed-cert
# TLS listener. `tokio-rustls` is needed only on the test side to build the
# `TlsAcceptor` over a rustls `ServerConfig`. tokio-tungstenite re-exports
# `rustls` itself behind `__rustls-tls`, but the server-side acceptor lives
# in `tokio-rustls` (not in tokio-tungstenite directly). Dev-only.
#
# F-CLIENT-FACADE-1 closure session 1: the mock gateway harness accepts
# WebSocket upgrades over a self-signed-cert TLS listener. `tokio-rustls` is
# needed only on the test side to build the `TlsAcceptor` over a rustls
# `ServerConfig`. Dev-only.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# Ed25519 / rand_core теперь main deps (round-5 device-capture closure
# F-PHD-DC-R10-1 Component 1 — MockHwKeystore). [dev-dependencies] больше
# их не дублирует.
# Ed25519 / rand_core are now main deps (round-5 device-capture closure
# F-PHD-DC-R10-1 Component 1 — MockHwKeystore). No longer duplicated under
# [dev-dependencies].

# BIP-39 mnemonic for R7 device-capture lldb example (round 4 PhD-B audit).
# Reads a 32-byte entropy needle, builds the canonical IdentitySeed, then
# parks at named breakpoints so an lldb Python scanner can search process
# memory for the needle bytes.
bip39 = { workspace = true }

# F-4 closure (PhD-B Pass 5 remediation): R21 attack test rebuild uses
# real FROST 3-of-5 threshold signatures over UNRECOVERABLE_DELETE commands
# instead of bypass-style direct invocation. The test rig drives DKG ↔ sign
# ↔ aggregate end-to-end via umbrella_threshold_identity::dkg /
# umbrella_threshold_identity::signing helpers; the FROST types
# (`KeyPackage`, `PublicKeyPackage`, `Signature`) are used directly to wire
# the mock cluster transport. Scope is dev-only — production API surface
# stays free of this dep.
#
# F-4 closure: R21 attack test rebuild needs FROST types for the mock
# Sealed Server cluster. Dev-only — never linked into production.
frost-ed25519 = { workspace = true }

# umbrella-threshold-identity для round-6 attack tests (R20-R27).
# Already main dep — also needed as dev-dep for `attack_*` test direct use.

[[example]]
name = "r7_identity_lldb_target"
required-features = []

[[example]]
name = "r12_ratchet_lldb_target"
required-features = []

[[example]]
name = "r20_distributed_identity_lldb_target"
required-features = []
