[package]
name = "umbrella-fuzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "cargo-fuzz targets для парсеров MLSMessage, KeyPackage, Welcome, Sealed Sender envelope, PQ wire-форматов (X-Wing, hybrid signature, KT v2, sealed-sender V2, backup wrap V2, MLS KeyPackage)."
publish = false

[lints.rust]
unsafe_code = "forbid"

[features]
# Hybrid post-quantum fuzz harnesses opt-in (v1.1.0 release, production release).
#
# Активирует 7 fuzz target'ов для PQ wire-форматов: X-Wing pubkey/ciphertext,
# hybrid signature (Ed25519+ML-DSA-65), KT v2 entry с V1↔V2 dispatch,
# sealed-sender V2 envelope, backup wrap V2 outer X-Wing layer, MLS KeyPackage
# (включая 0x004D ciphersuite advertise). Без feature pq — host crate работает
# идентично 14 existing classical fuzz targets (постулат 1: wire-format
# invariant 0.0.11 сохранён, ABI совместимость существующих fuzz binaries).
#
# Активация: `cargo +nightly fuzz run <pq_target> --features pq` либо
# через umbrella-fuzz-targets sub-crate `default-features = false, features = ["pq"]`.
# OSS-Fuzz buildscript всегда активирует pq feature для max coverage.
#
# Hybrid post-quantum fuzz harnesses opt-in (v1.1.0 release, production release).
#
# Activates 7 fuzz targets for PQ wire-formats: X-Wing pubkey/ciphertext,
# hybrid signature (Ed25519+ML-DSA-65), KT v2 entry with V1↔V2 dispatch,
# sealed-sender V2 envelope, backup wrap V2 outer X-Wing layer, MLS KeyPackage
# (including the 0x004D ciphersuite advertise). Without the pq feature, the
# host crate behaves identically to the 14 existing classical fuzz targets
# (postulate 1: wire-format invariant 0.0.11 preserved, ABI compatibility for
# existing fuzz binaries). The OSS-Fuzz build script always activates pq for
# maximum coverage.
default = []
pq = [
    "dep:umbrella-pq",
    "umbrella-pq/full",
    "dep:umbrella-mls",
    "umbrella-mls/pq",
    "dep:umbrella-sealed-sender",
    "umbrella-sealed-sender/pq",
    "umbrella-identity/pq",
    "umbrella-backup/pq",
    "umbrella-kt/pq",
]

[dependencies]
umbrella-crypto-primitives = { workspace = true }
umbrella-server-blind-postman = { workspace = true }
umbrella-padding = { workspace = true }
umbrella-kt = { workspace = true }
umbrella-oprf = { workspace = true }
umbrella-backup = { workspace = true }
umbrella-calls = { workspace = true }
umbrella-identity = { workspace = true }

# Task 3 carry-over closure 2026-05-21: max_ratchet v3 envelope codec moved в
# `umbrella-mls::max_ratchet::envelope` (sibling других max_ratchet модулей); harnesses
# `fuzz_max_ratchet_envelope_decode` + `fuzz_max_ratchet_envelope_roundtrip` импортируют
# его через existing `umbrella-mls = { optional = true, ... }` под feature `pq`. Никакой
# transitive umbrella-client unification не нужен.
# Task 3 (2026-05-21): v3 envelope codec lives in umbrella-mls; existing umbrella-mls
# optional dep already covers fuzz target imports under feature `pq`.

# Для синтеза валидного QR/handshake state в Secret device-transfer fuzz targets.
# For synthesising a valid QR/handshake state in Secret device-transfer fuzz targets.
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

# v1.1.0 release production release — нужны для `fuzz_oprf_lagrange_determinism`:
# `Scalar` для конверсии `[u8; SCALAR_LEN]` master_sk → `shamir_split_for_testing`
# input + `heapless::Vec` для накопления partial evaluations в OPRF flow.
# v1.1.0 release production release — needed for `fuzz_oprf_lagrange_determinism`:
# `Scalar` to convert `[u8; SCALAR_LEN]` master_sk → `shamir_split_for_testing`
# input + `heapless::Vec` to accumulate partial evaluations in the OPRF flow.
curve25519-dalek = { workspace = true }
heapless = { workspace = true }

# PQ deps — feature-gated через `pq` (production release). Каждый dep `optional = true`,
# активируется только под features `pq`. Это сохраняет cargo test --workspace
# --no-default-features --locked baseline (postulate 7 + production design Решение 7
# feature flag иерархия для opt-in PQ exposure).
#
# PQ deps — feature-gated via `pq` (production release). Each dep is `optional = true`,
# activated only under the `pq` feature. This preserves the
# cargo test --workspace --no-default-features --locked baseline (postulate 7
# + production design Decision 7 feature flag hierarchy for opt-in PQ exposure).
umbrella-pq = { workspace = true, optional = true }
umbrella-mls = { workspace = true, optional = true }
umbrella-sealed-sender = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
